# environment-

./: .gitignore  README.md  pyproject.toml
data/: info.md
src/: models.md
src/attention_kan/: attention_test.py  interpretability_plot.py  kan_test.py  long_dep_test.py  robust_test.py
src/kan_es/: info.md  main.py  model.py  vis_util.py
src/kan_es/results/multiscale_20250325_085135/: model.pt  results.json
src/kan_es/results/standard_20250325_082413/: model.pt  results.json
src/kan_es/results/standard_20250325_083112/: results.json
src/kan_es/results/standard_20250325_084406/: results.json
src/kan_es/results/standard_20250325_084637/: results.json
