[tool.poetry]
name = "environment"
version = "0.1.0"
description = "Event Sequencing sandbox for proof of concept researching models"
authors = ["Jayden <jayden_ferguson1@baylor.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.2.3"
torch = "^2.6.0"
tinygrad = "^0.10.2"
jax = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
